--- a/index.html
+++ b/index.html
@@ -3,61 +3,31 @@
 <head>
     <title>ClearToFly - Interactive Map</title>
     <meta charset="UTF-8">
-    <meta property="og:title" content="ClearToFly - המפה האינטראקטיבית שלך">
-    <meta property="og:description" content="לחץ כאן לפתיחת המפה המדויקת של המיקום שביקשת.">
-    <meta property="og:image" content="https://maps.googleapis.com/maps/api/staticmap?center={{LAT}},{{LON}}&zoom=13&size=600x300&markers=color:red|{{LAT}},{{LON}}&key=YOUR_GOOGLE_MAPS_API_KEY">
+    <meta property="og:title" content="ClearToFly – מפה אינטראקטיבית">
+    <meta property="og:description" content="לחץ כאן לפתיחת המפה האינטראקטיבית של המיקום שלך.">
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b0/Openstreetmap_logo.svg/800px-Openstreetmap_logo.svg.png">
     <meta property="og:type" content="website">
+    <meta property="og:image:width" content="800">
+    <meta property="og:image:height" content="800">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="https://unpkg.com/esri-leaflet/dist/esri-leaflet.js"></script>
 </head>
 <body style="margin:0;">
     <div id="map" style="width: 100%; height: 100vh;"></div>
 
     <script>
-        const urlParams = new URLSearchParams(window.location.search);
-        const userLat = parseFloat(urlParams.get('lat'));
-        const userLon = parseFloat(urlParams.get('lon'));
+        const params = new URLSearchParams(window.location.search);
+        const userLat = parseFloat(params.get('lat'));
+        const userLon = parseFloat(params.get('lon'));
 
-        document.querySelector('meta[property="og:image"]').content = 
-        `https://maps.googleapis.com/maps/api/staticmap?center=${userLat},${userLon}&zoom=13&size=600x300&markers=color:red|${userLat},${userLon}&key=YOUR_GOOGLE_MAPS_API_KEY`;
+        const map = L.map('map').setView([userLat, userLon], 13);
 
-        const map = L.map('map').setView([userLat, userLon], 12);
-
-        const osmStreets = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: 'OpenStreetMap Streets'
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: '&copy; OpenStreetMap contributors'
         }).addTo(map);
 
-        const esriSatellite = L.esri.basemapLayer('Imagery');
-
-        const esriHybrid = L.layerGroup([
-            L.esri.basemapLayer('Imagery'),
-            L.esri.basemapLayer('ImageryLabels')
-        ]);
-
-        const northLayer = L.tileLayer('https://mapwarper.net/maps/tile/93412/{z}/{x}/{y}.png', {
-            attribution: 'AIP North'
-        });
-
-        const southLayer = L.tileLayer('https://mapwarper.net/maps/tile/93413/{z}/{x}/{y}.png', {
-            attribution: 'AIP South'
-        });
-
-        const baseLayers = {
-            "רחובות (OpenStreetMap)": osmStreets,
-            "לווין (Esri Satellite)": esriSatellite,
-            "היברידי (Esri Hybrid)": esriHybrid
-        };
-
-        const overlayLayers = {
-            "מפת צפון": northLayer,
-            "מפת דרום": southLayer
-        };
-
-        L.control.layers(baseLayers, overlayLayers, {collapsed: false}).addTo(map);
-
         const marker = L.marker([userLat, userLon]).addTo(map);
-        marker.bindPopup("המיקום המבוקש").openPopup();
+        marker.bindPopup("המיקום המבוקש 🗺️").openPopup();
     </script>
 </body>
 </html>
