--- a/index.html
+++ b/index.html
@@ -16,52 +16,55 @@
       const params = new URLSearchParams(window.location.search);
       const userLat = parseFloat(params.get('lat'));
       const userLon = parseFloat(params.get('lon'));
-      const zoom = parseInt(params.get('zoom')) || 15; // הזום שיוגדר מראש (ברירת מחדל 15)
+      const zoom = parseInt(params.get('zoom')) || 15;
 
-      // קביעת og:image לתמונה מדויקת וממוקדת מראש
+      // הגדרת og:image
       const ogImage = document.querySelector('meta[property="og:image"]');
-      ogImage.content = `https://api.apiflash.com/v1/urltoimage?access_key=63a4fef50b4343a0862b590bdffa5747&wait_until=network_idle&url=https://eran89h.github.io/cleartoflysouth-map/?lat=${userLat}&lon=${userLon}&zoom=${zoom}&fresh=true`;
+      ogImage.content = `https://api.apiflash.com/v1/urltoimage?access_key=63a4fef50b4343a0862b590bdffa5747&delay=5&url=https://eran89h.github.io/cleartoflysouth-map/?lat=${userLat}&lon=${userLon}&zoom=${zoom}&fresh=true`;
     </script>
 </head>
 <body style="margin:0;">
 <div id="map" style="width: 100%; height: 100vh;"></div>
 
 <script>
-    const map = L.map('map').setView([userLat, userLon], zoom);
+    // השהייה של חצי שניה לפני טעינת המפה לוודא שהכל נטען
+    setTimeout(() => {
+      const map = L.map('map').setView([userLat, userLon], zoom);
 
-    const osmStreets = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; OpenStreetMap contributors'
-    }).addTo(map);
+      const osmStreets = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+          attribution: '&copy; OpenStreetMap contributors'
+      }).addTo(map);
 
-    const esriSatellite = L.esri.basemapLayer('Imagery');
-    const esriHybrid = L.layerGroup([
-        L.esri.basemapLayer('Imagery'),
-        L.esri.basemapLayer('ImageryLabels')
-    ]);
+      const esriSatellite = L.esri.basemapLayer('Imagery');
+      const esriHybrid = L.layerGroup([
+          L.esri.basemapLayer('Imagery'),
+          L.esri.basemapLayer('ImageryLabels')
+      ]);
 
-    const northLayer = L.tileLayer('https://mapwarper.net/maps/tile/93412/{z}/{x}/{y}.png', {
-        attribution: 'AIP North'
-    }).addTo(map);
+      const northLayer = L.tileLayer('https://mapwarper.net/maps/tile/93412/{z}/{x}/{y}.png', {
+          attribution: 'AIP North'
+      }).addTo(map);
 
-    const southLayer = L.tileLayer('https://mapwarper.net/maps/tile/93413/{z}/{x}/{y}.png', {
-        attribution: 'AIP South'
-    }).addTo(map);
+      const southLayer = L.tileLayer('https://mapwarper.net/maps/tile/93413/{z}/{x}/{y}.png', {
+          attribution: 'AIP South'
+      }).addTo(map);
 
-    const baseLayers = {
-        "רחובות (OpenStreetMap)": osmStreets,
-        "לווין (Esri Satellite)": esriSatellite,
-        "היברידי (Esri Hybrid)": esriHybrid
-    };
+      const baseLayers = {
+          "רחובות (OpenStreetMap)": osmStreets,
+          "לווין (Esri Satellite)": esriSatellite,
+          "היברידי (Esri Hybrid)": esriHybrid
+      };
 
-    const overlayLayers = {
-        "מפת צפון": northLayer,
-        "מפת דרום": southLayer
-    };
+      const overlayLayers = {
+          "מפת צפון": northLayer,
+          "מפת דרום": southLayer
+      };
 
-    L.control.layers(baseLayers, overlayLayers, {collapsed: false}).addTo(map);
+      L.control.layers(baseLayers, overlayLayers, {collapsed: false}).addTo(map);
 
-    const marker = L.marker([userLat, userLon]).addTo(map);
-    marker.bindPopup("המיקום המבוקש 🗺️").openPopup();
+      const marker = L.marker([userLat, userLon]).addTo(map);
+      marker.bindPopup("המיקום המבוקש 🗺️").openPopup();
+    }, 500); // 500ms השהייה
 </script>
 </body>
 </html>
